# with_it_app

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/: keystore.properties  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist
ios/Runner/Base.lproj/: Main.storyboard
lib/: main.dart
lib/base/: base.dart
lib/base/src/controller/: base_controller.dart
lib/l10n/: app_en.arb  app_ko.arb
lib/model/: model.dart
lib/module/: module.dart
lib/module/const/: const.dart
lib/module/enum/: enum.dart
lib/module/exception/: app_exception.dart
lib/module/function/: function.dart
lib/module/ui/: ui.dart
lib/ui/app/: app.dart  app_controller.dart  app_cubit.dart  app_state.dart
lib/ui/main/: main_bloc.dart  main_controller.dart  main_event.dart  main_page.dart
lib/ui/name/: name_bloc.dart  name_controller.dart  name_event.dart  name_page.dart
lib/ui/widget/: widget.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
messages/: home.proto  home_service.proto  planner.proto  planner_service.proto  result.proto  test.proto  user.proto  user_service.proto
native/hub/: Cargo.toml  build.rs
native/hub/src/: lib.rs  with_request.rs
native/hub/src/api/: home.rs  mod.rs  planner.rs  test.rs  user.rs
native/hub/src/model/: mod.rs  status_model.rs
native/hub/src/module/: url.rs
native/hub/src/test/: home.rs  planner.rs  test.rs  user.rs
web/: index.html  manifest.json
(+105 files in other folders)
