[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
openssl = { version = "0.10.35", features = ["vendored"] }
openssl-sys = "0.9.94"
prost = "0.12.3"
reqwest = { version = "0.11.22", features = ["json"] }
rinf = "4.17.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
tokio_with_wasm = "0.4.3"
wasm-bindgen = "0.2.88"
