[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
allo-isolate = { version = "0.1.23", features = ["zero-copy"] }
prost = "0.12.3"
reqwest = { version = "0.12.2", features = ["rustls-tls", "json"], default-features = false }
rinf = "5.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio_with_wasm = "0.4.3"
wasm-bindgen = "0.2.92"
